parrafo nuevo creado

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,12 @@
     <h1>Chanchito feliz</h1>
     <br>
     <p>Creando un parrafo</p>
+
+
+
+
+
+    <br>
+    <p>otro párrafo</p>
 </body>
 </html>
