Segundo Cambio hecho desde vscode.

--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
     <p>otro párrafo</p>
     <br>
     <p>un párrafo añadido a github desde V.S.CODE</p>
+    <p>Tengo que resolver dudas en github</p>
 </body>
 </html>
