--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,6 @@
     <br>
     <p>un párrafo añadido a github desde V.S.CODE</p>
     <p>Tengo que resolver dudas en github</p>
+    <p>Parrafo creado desde GitHub.</p>
 </body>
 </html>
