--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
     <p>un párrafo añadido a github desde V.S.CODE</p>
     <p>Tengo que resolver dudas en github</p>
     <p>Parrafo creado desde GitHub.</p>
+    <p>Parrafo creado desde V S COE</p>
 </body>
 </html>
